Update WeChatPush.java